Fix potential scrollbar issue in grid

--- a/src/mm-item-recycler/mm-item-recycler.scss
+++ b/src/mm-item-recycler/mm-item-recycler.scss
@@ -24,6 +24,16 @@
 	max-height: inherit;
 }
 
+#quad {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	position: absolute;
+	display: block;
+	overflow: hidden;
+}
+
 #constrainer {
 	display: inline-block;
 }
